# gm-ladder-webservice

./: .gitignore  CHANGELOG.md  README.md  players.sqlite3  sc2-gm-ladder-backend.cabal  test_db.sqlite3
app/: Main.hs
config/: App.hs  BattleNet.hs  Config.hs  Secrets.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.7/: package.cache  sc2-gm-ladder-backend-0.1.0.0-inplace.conf
src/: Api.hs  ApiEntities.hs  BattleNet.hs  ConvertEntities.hs  Database.hs  DbEntities.hs  DbQueries.hs  Domain.hs  Entities.hs  Network.hs  Queries.hs
src/Environment/: Config.hs
src/Model/DbPlayer/: Adaptor.hs  Domain.hs  Query.hs  Service.hs  Types.hs
src/Model/LadderTeams/: Adaptor.hs  Types.hs
src/Model/Player/: Adaptor.hs  Query.hs  Types.hs  Update.hs
src/Model/PlayerInfo/: Types.hs
src/Network/: Service.hs
src/Network/API/: Config.hs
src/Network/API/Routes/: All.hs  EU.hs  KR.hs  NA.hs
test/: DbQueriesSpec.hs  DomainSpec.hs  MockData.hs
