cabal-version:      2.4
name:               sc2-gm-ladder-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Roberts
maintainer:         mau5mat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sc2-gm-ladder-backend
    main-is: Main.hs

    hs-source-dirs: app

    build-depends: base ^>=4.16.4.0
                 , text
                 , aeson
                 , unliftio
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , servant
                 , servant-server
                 , wai
                 , warp
                 , hspec
                 , http-client
                 , http-conduit
                 , monad-logger
                 , unliftio
                 , mtl
                 , conduit
                 , sc2-gm-ladder-backend

    default-language: Haskell2010


library
    hs-source-dirs: src
                  , config

    exposed-modules: BattleNet
                   , Config
                   , DbQueries
                   , Domain
                   , Entities
                   , DbEntities
                   , ConvertEntities
                   , Network
                   , Api
                   , Secrets

    build-depends: base ^>=4.16.4.0
                 , text
                 , aeson
                 , unliftio
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , servant
                 , servant-server
                 , wai
                 , warp
                 , hspec
                 , http-client
                 , http-conduit
                 , monad-logger
                 , unliftio
                 , mtl
                 , conduit

    default-language: Haskell2010
