cabal-version:      2.4
name:               sc2-gm-ladder-backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Matt Roberts
maintainer:         mau5mat@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sc2-gm-ladder-backend
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , aeson
    , base                   ^>=4.17.2.0
    , conduit
    , effectful-core
    , hspec
    , http-client
    , http-conduit
    , monad-logger
    , mtl
    , persistent
    , persistent-sqlite
    , persistent-template
    , sc2-gm-ladder-backend
    , servant
    , servant-server
    , text
    , unliftio-core
    , wai
    , warp

  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports -Wno-unused-top-binds
    -Wno-missing-exported-signatures

library
  hs-source-dirs:   src config
  exposed-modules:
    App
    BattleNet
    Environment.Config
    Model.DbPlayer.Adaptor
    Model.DbPlayer.Domain
    Model.DbPlayer.Query
    Model.DbPlayer.Service
    Model.DbPlayer.Types
    Model.LadderTeams.Adaptor
    Model.LadderTeams.Types
    Model.Player.Adaptor
    Model.Player.Types
    Model.Player.Update
    Model.PlayerInfo.Types
    Network.API.Config
    Network.API.Routes.All
    Network.API.Routes.EU
    Network.API.Routes.KR
    Network.API.Routes.NA
    Network.Service
    Secrets

  build-depends:
    , aeson
    , base                 ^>=4.17.2.0
    , conduit
    , effectful-core
    , hspec
    , http-client
    , http-conduit
    , monad-logger
    , mtl
    , persistent
    , persistent-sqlite
    , persistent-template
    , servant
    , servant-server
    , text
    , unliftio-core
    , wai
    , warp

  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports -Wno-unused-top-binds
    -Wno-missing-exported-signatures

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  other-modules:
    DbQueriesSpec
    DomainSpec
    MockData

  build-depends:
    , aeson
    , base                   ^>=4.17.2.0
    , conduit
    , hspec
    , http-client
    , http-conduit
    , monad-logger
    , mtl
    , persistent
    , persistent-sqlite
    , persistent-template
    , sc2-gm-ladder-backend
    , servant
    , servant-server
    , text
    , unliftio
    , wai
    , warp

  build-tool-depends: hspec-discover:hspec-discover
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wno-unused-imports -Wno-unused-top-binds
    -Wno-missing-exported-signatures
